making correction to the grid gap

--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ a.update:hover {
 }
 
 main {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   width: 100vw;
   overflow-x: hidden;
 }
@@ -552,12 +552,16 @@ main {
 
 /* category styling */
 
-.categories {
+.category-container {
   padding: 10px;
 }
 
+.categories {
+  padding: 10px 0 10px 0;
+}
+
 .categories-heading {
-  padding: 19px;
+  padding: 9px 10px 19px 9px;
   color: #f42;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 900;
@@ -581,7 +585,7 @@ main {
 
 .categories-list-container {
   margin: 0;
-  padding: 9px;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
@@ -624,7 +628,7 @@ main {
 
 .categories-items-image-middle {
   font-family: inherit;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 900;
 }
 
@@ -643,6 +647,7 @@ main {
 .categories-items2 {
   background: rgba(255, 68, 34, 0.06);
   display: flex;
+  color: #f42;
   list-style: none;
   margin-bottom: 10px;
 }
@@ -662,7 +667,7 @@ main {
 
 .categories-items2-text {
   display: block;
-  font-weight: 800;
+  font-weight: 900;
   width: 100%;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -677,9 +682,9 @@ main {
 .categories-list-items {
   color: #555;
   display: block;
-  padding: 6px 0 6px 14px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   position: relative;
-  margin-left: -15px;
   font-size: 100%;
 }
 
@@ -691,12 +696,11 @@ main {
 
 .cat-list-items {
   border-bottom: 1px solid #eee;
-  margin: 20px;
+  margin-top: 10px;
+  margin-left: 30px;
   opacity: 1;
-}
-
-.orangelist {
-  color: #f42;
+  list-style: disc;
+  color: red;
 }
 
 .categories-items-image-middle:hover,
@@ -1439,11 +1443,11 @@ a.sm {
   .category-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 50px;
+    padding: 0 50px 0 50px;
   }
 
   .categories-items-image-last {
-    font-size: 15px;
+    font-size: 10px;
     margin-bottom: 5px;
   }
 
